# Traditional-Dw-Etl

./: README.md  pyproject.toml
catalog/database_metrics/: database_metrics.ipynb
catalog/mer_diagrams/: mer_diagrams.ipynb
catalog/mer_diagrams/dots/DMOls/: DMOls_F_ORDEM_ITEM.dot
docker_compose_files/mysql/: docker-compose.yaml
docker_compose_files/postgresql/: docker-compose.yaml
docker_compose_files/ssms/: docker-compose.yaml
sql/create_tables/: create_schemas.sql
sql/dw_schema/DMOls/dims/: d_cliente_insert.sql  d_cliente_update.sql  d_produto_insert.sql  d_produto_update.sql  d_vendedor_insert.sql  d_vendedor_update.sql
sql/dw_schema/DMOls/facts/: f_ordem_item_insert.sql  f_ordem_item_update.sql
sql/stages_mysql/: stg_ols_products.sql  stg_ols_sellers.sql
sql/stages_postgresql/: stg_ols_customers.sql  stg_ols_order_items.sql  stg_ols_orders.sql
traditional_dw_etl/: logs_2023-06-22.txt  main.py
traditional_dw_etl/package/core/: schemas.py  staggings.py  stagings.py
traditional_dw_etl/package/database/: connections.py
traditional_dw_etl/package/utils/: __init__.py  credentials.py  deco_functions.py
