[tool.poetry]
name = "traditional-dw-etl"
version = "0.1.0"
description = ""
authors = ["xGabrielR <gabrielrichter2020@gmail.com>"]
readme = "README.md"
packages = [{include = "traditional_dw_etl"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pandas = "^2.0.2"
aiomysql = "^0.2.0"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
databases = "^0.7.0"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
